--- a/s/w/swappermall.json
+++ b/s/w/swappermall.json
@@ -1,5 +1,17 @@
 {
   "owner_address": "1KXL6Tfw852ZDDVfjuvB5S6BMScm7W27LZ",
-  "profile": {},
+  "profile": {
+    "account": [
+      {
+        "@type": "Account",
+        "identifier": "7633bfa9d675bf006b2c769be5c14fb94042183b",
+        "service": "openbazaar"
+      }
+    ],
+    "cover": {
+      "url": "https://s3.amazonaws.com/97p/vsS.jpeg"
+    },
+    "v": "0.2"
+  },
   "verifications": []
 }
